made a working id from card func

--- a/src/components/RightPane/RightPane.css
+++ b/src/components/RightPane/RightPane.css
@@ -29,9 +29,15 @@
     flex-direction: column;
     gap:2rem;
     position:relative;
+    transition: 0.8s all;
 }
 
-.productsLits__img{
+.productsList__item--gray:hover{
+    cursor:pointer;
+    filter: grayscale(1);
+}
+
+.productsList__img{
     height:100%;
     width:100%;
     object-fit: cover;
